<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/dashboard"/>

    <item
        android:id="@+id/navigation_stock"
        android:icon="@drawable/ic_stock"
        android:title="@string/inStock"/>

    <item
        android:id="@+id/navigation_production"
        android:icon="@drawable/ic_production"
        android:title="@string/inProduction"/>

    <item
        android:id="@+id/navigation_packing"
        android:icon="@drawable/ic_packing"
        android:title="@string/onPacking"/>

    <item
        android:id="@+id/navigation_delivery"
        android:icon="@drawable/ic_delivery"
        android:title="@string/onDelivery"/>

</menu>