<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:id="@+id/layoutInputUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:hint="@string/inputUsername"
        app:errorEnabled="true"
        app:boxStrokeColor="#80DE6B28"
        app:hintTextAppearance="@style/textField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputUsername"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:textAppearance="@style/textField" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:id="@+id/layoutInputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:hint="@string/inputPassword"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/textField"
        app:boxStrokeColor="#80DE6B28" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/textField" />

    </com.google.android.material.textfield.TextInputLayout>

    <cyd.awesome.material.AwesomeText
        android:id="@+id/ShowHidePasswordSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="340dp"
        android:textColor="#000000"
        android:textSize="20sp"
        app:awesome_font="material_design"
        app:awesome_icon="MD_VISIBILITY_OFF" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/rounded_signin_button"
        android:hint="@string/signIn"
        android:textAppearance="@style/signInButton" />

</RelativeLayout>